# pulsars-classification

./: README.md  main.py  pyproject.toml
data/processed/: pulsar_processed.csv
models/: gb_best_model.pkl  logistic_regression_tuned_threshold.pkl  xgb_best_model.pkl
notebooks/: 1.0.0-dataset-loading-and-eda.ipynb  1.1.0-data-preprocessing.ipynb  2.0.0-model-training.ipynb  2.0.1-te-model-training.ipynb  2.1.0-lr-model-training.ipynb  2.2.1-rf-model-training.ipynb  2.2.2-gb-model-training.ipynb  2.2.3-xgb-model-training.ipynb
